--- a/inetpub/wwwroot/ServicesMvc/assets/css/style.css
+++ b/inetpub/wwwroot/ServicesMvc/assets/css/style.css
@@ -10,7 +10,7 @@ Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-templa
  GENERAL UI COLORS 
 *********************/
 
-/***
+/***f
 Colors
 blue:  #4b8df8
 light blue: #bfd5fa
