--- a/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Index.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Index.cshtml
@@ -1,238 +1,24 @@
 ﻿@model CkgDomainLogic.DataConverter.ViewModels.DataConverterViewModel
 
 <link href="~/content/DataConverter-Main.css" rel="stylesheet" type="text/css" />
-<script src="@Url.Content("~/Scripts/jsPlumb-2.0.3.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jsPlumb-2.0.5.js")" type="text/javascript"></script>
 
-<style>
-    
-    #DataConverterContainer2 {
-        width: 100%; height: 500px; position: relative;
-    }
-    
-    #source {
-        height: 450px;
-        width: 250px;
-        position: absolute;
-        padding: 0px;
-        overflow: auto;
-        overflow-x: hidden;
-        -ms-overflow-x: hidden;
-        margin-top: 10px;
-    }
-
-    #destination {
-        height: 450px;
-        width: 250px;
-        right: 3%;
-        position: absolute;
-        overflow: auto;
-        overflow-x: hidden;
-        -ms-overflow-x: hidden;
-    }
-
-    .w {
-        width: 95%;
-        height: 20px;
-        border: solid 1px gray;
-        margin: 0px;
-        margin-right: 5px;
-        margin-top: 5px;
-    }
-
-    #divContainer {
-        margin-top: 40px;
-        margin-bottom: 20px;
-        padding: 2px;
-        overflow: auto;
-        overflow-y: hidden;
-        -ms-overflow-y: hidden;
-    }
-
-    .a {
-        width: 30px;
-        border: solid gray 1px;
-        height: 20px;
-        display: inline-block;
-    }
-
-    .sp {
-        background-color: red;
-        width: 5px;
-        height: 5px;
-        margin: 5px;
-        padding: 5px;
-        margin-top: 2px;
-    }
-
-    .ep {
-        background-color: blue;
-        width: 5px;
-        height: 5px;
-        margin: 5px;
-        padding: 5px;
-        margin-top: 3px;
-    }
-
-    .processor {
-        width: 150px;
-        height: 85px;
-        padding: 5px;
-        padding-top: 5px;
-        padding-bottom: 0px;
-        position: absolute;
-        z-index: 4;
-        border: 1px solid #2e6f9a;
-        box-shadow: 2px 2px 19px #e0e0e0;
-        -o-box-shadow: 2px 2px 19px #e0e0e0;
-        -webkit-box-shadow: 2px 2px 19px #e0e0e0;
-        -moz-box-shadow: 2px 2px 19px #e0e0e0;
-        -moz-border-radius: 8px;
-        border-radius: 8px;
-        opacity: 0.8;
-        cursor: move;
-        background-color: white;
-        font-size: 11px;
-        -webkit-transition: background-color 0.25s ease-in;
-        -moz-transition: background-color 0.25s ease-in;
-        transition: background-color 0.25s ease-in;
-        top: 10px;
-        left: 45%;
-    }
-
-    .processor .title {
-        text-align: center;
-        margin-bottom: 10px;
-        font-size: 13px;
-    }
-
-    .processor .content {
-        cursor: pointer;
-    }
-
-    .prozin {
-        position: absolute;
-        left: -3px;
-        top: -3px;
-        width: 1em;
-        height: 1em;
-        background-color: orange;
-        cursor: pointer;
-        box-shadow: 0 0 2px black;
-        -webkit-transition: -webkit-box-shadow 0.25s ease-in;
-        -moz-transition: -moz-box-shadow 0.25s ease-in;
-        transition: box-shadow 0.25s ease-in;
-        background-color: blue;
-        width: 5px;
-        height: 5px;
-        margin: 5px;
-        padding: 5px;
-    }
-
-    .prozin:hover {
-        box-shadow: 0 0 6px black;
-    }
-
-    .prozout {
-        position: absolute;
-        right: -3px;
-        top: -3px;
-        width: 1em;
-        height: 1em;
-        background-color: orange;
-        cursor: pointer;
-        box-shadow: 0 0 2px black;
-        -webkit-transition: -webkit-box-shadow 0.25s ease-in;
-        -moz-transition: -moz-box-shadow 0.25s ease-in;
-        transition: box-shadow 0.25s ease-in;
-        background-color: green;
-        width: 5px;
-        height: 5px;
-        margin: 5px;
-        padding: 5px;
-    }
-
-    .prozout:hover {
-        box-shadow: 0 0 6px black;
-    }
-
-    .field {
-        width: 90px;
-        float: left;
-    }
-
-    .data 
-    {
-        font-style: italic;
-        float: left;
-        margin-right: 3px;
-        padding-right: 3px;
-        
-        width: 90px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-    .btnfirst {
-        margin-left: 20px;
-        margin-top: 10px;
-    }
-
-    .menutop {
-        border: solid 1px lightblue;
-        background-color: lightcyan;
-        width: 100%;
-        height: 50px;
-    }
-
-    .marginright-10 {
-        margin-right: 10px;
-    }
-    
-    .width-160 {
-         width: 160px;
-    }
-    
-    .datastyle {
-        margin-left: -5px;     
-        line-height: 90%;   
-    }
-    
-    .processortype {
-        width: 151px; margin-top: 5px; margin-bottom: 1px;
-    }
-    .processorpara1 {
-        width: 60px; float: left !important; margin-left: 2px; margin-bottom: 2px;
-    }
-    
-    .processorpara2 {
-        width: 60px; float: left !important; margin-left: 2px; margin-bottom: 2px;display: none;
-    }
-    
-    .nodetitle-div {
-        margin-left: 0px !important;
-    }
-
-    .nodetitle {
-        font-size: 12px;margin-top: 2px;margin-bottom: -3px;background-color: #add8e6;padding-left: 4px;font-weight: bold;border: 1px solid gray;
-    }
-    
-    .btn-xs {
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-bottom: 4px;
-    }
-    
-</style>
-<h3 class="page-title">Data-Converter <small>Administration</small></h3>
-
-<div class="portlet app-view">
-    
-    @Html.FormWizard("icon-file", "", Model.StepFriendlyNames, Model.StepKeys)
-
-    <div id="formWizardTab1" class="hide">
-        @Html.Partial("Partial/Prozessauswahl", Model.Prozessauswahl)
-    </div>
-</div>
+<h3 class="page-title">@Localize.DataConverter <small>@Localize.Administration</small></h3>
 
 @Html.Partial("Partial/Common")
+
+@Html.SpanAlert("spanAlertDataConverterAdmin")
+
+<div id="divSearchAndGrid">
+    @using (Html.FormSearchBox())
+    {
+        @Html.Partial("Partial/Suche", Model.Selektor)
+    }
+
+    @using (Html.FormSearchResultsGrid())
+    {
+        <div id="divGridDataMappings"></div>
+    }
+</div>
+
+<div id="divDataMappingDetails"></div>
