--- a/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Partial/Grid.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Partial/Grid.cshtml
@@ -3,18 +3,20 @@
 @{ var gridName = "GridDataMappings"; }
 
 @(Html.Telerik()
-    .Grid<DataConverterDataMapping>()   
+    .Grid<DataConverterMappingInfo>()   
     .Name(gridName)
     .XAjaxDataBinding("DataMappingsAjaxBinding", "Admin")
     .Columns(columns =>
     {
         columns.XBound(c => c.Id).Filterable(false).Sortable(false).Groupable(false)
             .ClientTemplate(
-                "<button onclick='ShowKonfiguration(\"<#= data.Id #>\");' class='btn mini gray tooltips' data-original-title='" + Localize.EditMapping + "' data-placement='right'><i class='halflings-icon white pencil'></i></button>"
+                "<button onclick='ShowKonfiguration(<#= data.Id #>);' class='btn mini gray tooltips' data-original-title='" + Localize.EditMapping + "' data-placement='right'><i class='halflings-icon white pencil'></i></button>"
+                + "&nbsp;" +
+                "<a href='#' onclick='DeleteKonfiguration(\"<#= data.Id #>\");' class='btn mini gray tooltips margin-left-5' data-original-title='" + Localize.DeleteMapping + "' data-placement='right'><i class='halflings-icon white remove'></i></a>"
             ).HeaderTemplate(
                 "<button onclick='ShowProzessauswahl();' class='btn mini gray tooltips' data-original-title='" + Localize.AddNewMapping + "' data-placement='right'><i class='halflings-icon white plus'></i></button>"
         );
-        
+
         columns.XBound(c => c.Customername);
         columns.XBound(c => c.KUNNR);
         columns.XBound(c => c.Process);
