New shopping cart symbol in shopping cart menu

--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/ShoppingCart/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/ShoppingCart/Common.cshtml
@@ -1,34 +1,32 @@
 ﻿<style type="text/css">
+    
     .shopping-cart-menu {
-        display: inline;
+        margin-top: 0; 
+    }
+    a.shopping_cart {
+        margin: -22px 40px -5px 45px;
+    }
+    .shopping-cart-menu a.shopping_cart i:before {
+        font-size: 25pt !important;
+        margin: 15px 0 0 0 !important;
     }
     .shopping-cart-menu span.badge {
-        padding-top: 6px;
-        padding-bottom: 4px;
-        padding-left: 5px;
-        padding-right: 4px;
-        margin-left: 26px;
-        font-size: 16px!important;
-        font-weight: normal;
-        height: 16px;
-        width: 16px;
+        font-family: 'PT Sans', Arial, "Helvetica Neue", Helvetica, sans-serif; 
         background-color: #ffb848;
-        border-radius: 16px !important;
         text-shadow: none!important;
         float: none;
         text-align: center;
+        height: 33px!important;
+        width: 33px!important;
+        line-height: 32px;
+        padding: 0px 0px 0px 0px!important;
+        margin: 19px 0 0 1px!important;
+        text-align: center!important;
+        font-size: 20px !important;
+        border-radius: 18px !important;
         box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.25);
     }
-    .shopping-cart-menu .glyphicons i:before {
-        color: #707070!important;
-        margin-top: -3px;
-        margin-left: 30px;
-        background-color: transparent!important;
-        float: none;
-        font-size: 28px!important;
-        text-decoration: none!important;
-    }
-    
+
     .shopping-cart-body-inner 
     {
         margin-top: 0px;
