--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/ShoppingCart/Menu.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/ShoppingCart/Menu.cshtml
@@ -1,9 +1,10 @@
 ﻿<span class="shopping-cart-menu">
     <a href="#" onclick="return ShoppingCartShow();" 
-        class="dropdown-toggle glyphicons shopping_cart tooltips" 
+        class="dropdown-toggle glyphicons white shopping_cart tooltips" 
         data-toggle="dropdown" data-hover="dropdown" data-close-others="true"
         data-original-title="Warenkorb anzeigen" data-placement="right">
-            <span class="badge"></span>
-            <i></i>
+
+        <span class="badge"></span>
+        <i></i>
     </a>
 </span>
