ITA 8547: Funktion zum Generieren von Zielstrukturen, Zielstrukturen und Mapping werden in SQL gespeichert, neue Variante der Anwendung "Upload Fahrzeugdaten" mit Datenmapping

--- a/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Index.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Index.cshtml
@@ -12,7 +12,7 @@
 <div id="divSearchAndGrid">
     @using (Html.FormSearchBox())
     {
-        @Html.Partial("Partial/Suche", Model.Selektor)
+        @Html.Partial("Partial/Suche", Model.MappingSelektor)
     }
 
     @using (Html.FormSearchResultsGrid())
