--- a/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Partial/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Partial/Common.cshtml
@@ -39,6 +39,7 @@
         margin: 0;
         margin-right: 5px;
         margin-top: 5px;
+        white-space: nowrap;
     }
 
     #divContainer {
