--- a/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Partial/Konfiguration.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/DataConverter/Views/Admin/Partial/Konfiguration.cshtml
@@ -20,7 +20,7 @@
         <button class="btn white margin-left-5" onclick="ClearAll();">@Localize.Clear <i class="icon-remove"></i></button>
         <button class="btn white margin-left-5 tooltips" data-original-title="@Localize.HideProcessors" data-placement="bottom" onclick="ShowHideProcessors(false);">@Localize.Hide <i class="halflings-icon eye-close"></i></button>
         <button class="btn white margin-left-5 tooltips" data-original-title="@Localize.ShowProcessors" data-placement="bottom" onclick="ShowHideProcessors(true);">@Localize.Show <i class="halflings-icon eye-open"></i></button>
-        <a class="btn white margin-left-5" href="TestExportXml">@Localize.TestExportToXml</a>
+        <a class="btn white margin-left-5" href="TestExportXml" target="_blank">@Localize.TestExportToXml</a>
     </div>
 
     <div class="space5"></div>
