--- a/inetpub/wwwroot/ServicesMvc/Views/AutohausFahrzeugdaten/UploadFahrzeugdaten/FileUpload.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/AutohausFahrzeugdaten/UploadFahrzeugdaten/FileUpload.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="control-group margin-top-20">
+﻿@model CkgDomainLogic.AutohausFahrzeugdaten.ViewModels.UploadFahrzeugdatenViewModel
+
+<div class="control-group margin-top-20">
     <label class="control-label">@Localize.UploadExcelFile:</label>
     <div class="controls">
                 
@@ -20,4 +22,7 @@
     </div>
 </div>
 
-<a href="DownloadFahrzeugdatenXlsTemplate" class="btn white tooltips margin-right-10 margin-top-20" data-original-title="@Localize.DownloadExcelFileTemplateTitle" data-placement="top">@Localize.DownloadTemplate <i class="icon-chevron-right"></i></a>
+@if (!Model.MappedUpload)
+{
+    <a href="DownloadFahrzeugdatenXlsTemplate" class="btn white tooltips margin-right-10 margin-top-20" data-original-title="@Localize.DownloadExcelFileTemplateTitle" data-placement="top">@Localize.DownloadTemplate <i class="icon-chevron-right"></i></a>
+}
